--- a/bakul/css/main.css
+++ b/bakul/css/main.css
@@ -616,16 +616,16 @@ section.promo .wrap-promo .wp-right {
 section.promo .wrap-promo .wp-right h2 {
   font-family: "Gabriela", serif; }
 
-section.promo .wrap-promo .wp-left .pr-left-bg {
+section.promo .wrap-promo .wp-left .item .pr-left-bg {
   width: 100%;
   height: 100%;
   position: absolute; }
 
-section.promo .wrap-promo .wp-left .pr-left-bg img {
+section.promo .wrap-promo .wp-left .item .pr-left-bg img {
   height: 100%;
   width: auto; }
 
-section.promo .wrap-promo .wp-left .pr-left-content {
+section.promo .wrap-promo .wp-left .item .pr-left-content {
   position: relative;
   z-index: 2;
   max-width: 500px;
@@ -633,10 +633,10 @@ section.promo .wrap-promo .wp-left .pr-left-content {
   text-align: center;
   color: #202020; }
 
-section.promo .wrap-promo .wp-left .pr-left-content h1 {
+section.promo .wrap-promo .wp-left .item .pr-left-content h1 {
   font-family: "Gabriela", serif; }
 
-section.promo .wrap-promo .wp-left .pr-left-content p {
+section.promo .wrap-promo .wp-left .item .pr-left-content p {
   font-size: 20px;
   font-weight: 600;
   padding: 20px 0px; }
