--- a/bakul/css/themecolor.css
+++ b/bakul/css/themecolor.css
@@ -9,9 +9,9 @@
 NOTE: This is stylesheet of theme color.
 
 **/
-
+/* 
 @import url("css-theme/theme-orange.css");
 @import url("css-theme/theme-green.css");
 @import url("css-theme/theme-blue.css");
-@import url("css-theme/theme-red.css");
+@import url("css-theme/theme-red.css"); */
 @import url("css-theme/theme-greensea.css"); 
