--- a/bakul/css/custom.css
+++ b/bakul/css/custom.css
@@ -1,78 +1,122 @@
-.preloading .cssload-loader {
-	width: 25vh;
-	height: 25vh;
-	margin: 1em;
-	display: inline-block;
-	position: relative;
-	vertical-align: middle; 
-}
+	.preloading .cssload-loader {
+		width: 25vh;
+		height: 25vh;
+		margin: 1em;
+		display: inline-block;
+		position: relative;
+		vertical-align: middle; 
+	}
 
-.preloading .cssload-loader {
-	animation: cssload-flower-fan 1s infinite linear;
-	-o-animation: cssload-flower-fan 1s infinite linear;
-	-ms-animation: cssload-flower-fan 1s infinite linear;
-	-webkit-animation: cssload-flower-fan 1s infinite linear;
-	-moz-animation: cssload-flower-fan 1s infinite linear; 
-}  
+	.preloading .cssload-loader {
+		animation: cssload-flower-fan 1s infinite linear;
+		-o-animation: cssload-flower-fan 1s infinite linear;
+		-ms-animation: cssload-flower-fan 1s infinite linear;
+		-webkit-animation: cssload-flower-fan 1s infinite linear;
+		-moz-animation: cssload-flower-fan 1s infinite linear; 
+	}  
 
-#home-slider {
-	top: -1px;
-}
+	#home-slider {
+		top: -1px;
+	}
 
-section.home-slider .owl-nav .owl-prev, 
-section.home-slider .owl-nav .owl-next {
-	background-color: transparent;
-	font-size: 5em;
-}
+	section.home-slider .owl-nav .owl-prev, 
+	section.home-slider .owl-nav .owl-next {
+		background-color: transparent;
+		font-size: 5em;
+	}
 
-.item .box-fm .bfm-img img{
-	min-width: 100%;
-}
+	.item .box-fm .bfm-img img{
+		min-width: 100%;
+	}
 
-section.testimonial .item-testimonial .client-content {
-	padding: 0px; 
-}
+	section.testimonial .item-testimonial .client-content {
+		padding: 0px; 
+	}
 
-section #left-promo .owl-nav {
-	position: absolute;
-	top: 280px;
-	width: 100%;
-	opacity: 0;
-	-webkit-transition: all 0.5s ease-in-out;
-	-moz-transition: all 0.5s ease-in-out;
-	-o-transition: all 0.5s ease-in-out;
-	-ms-transition: all 0.5s ease-in-out;
-	transition: all 0.5s ease-in-out; }
+	section.promo .wrap-promo .wp-left .item .pr-left-content{
+		margin: auto;
+		padding: 50px 50px 100px 50px
+	}
+
+	section #left-promo .owl-nav {
+		position: absolute;
+		top: 280px;
+		width: 100%;
+		opacity: 0;
+		-webkit-transition: all 0.5s ease-in-out;
+		-moz-transition: all 0.5s ease-in-out;
+		-o-transition: all 0.5s ease-in-out;
+		-ms-transition: all 0.5s ease-in-out;
+		transition: all 0.5s ease-in-out; }
   
-  section #left-promo:hover .owl-nav {
-	opacity: 1; 
-}
-section #left-promo .owl-nav {
-	height: 100%;
-}
-  section #left-promo .owl-nav .owl-prev,
-  section #left-promo .owl-nav .owl-next {
-	width: 50px;
-	display: table;
-	background-color: #000000;
-	color: #ffffff;
-	font-size: 24px;
-	position: absolute;
-	top: -40px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px; }
-  
-  section #left-promo .owl-nav .fa {
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center; }
-  
-  section #left-promo .owl-nav .owl-prev {
-	left: 10px; }
-  
-  section #left-promo .owl-nav .owl-next {
-	right: 10px; }
+	section #left-promo .owl-nav {
+		height: 100%;
+	}
+
+	section #left-promo .owl-nav .owl-prev,
+	section #left-promo .owl-nav .owl-next {
+		width: 50px;
+		height: 50px;
+		display: table;
+		opacity: 1;
+		background-color: rgba(0, 0, 0, 0.6);
+		color: #ffffff;
+		font-size: 24px;
+		position: absolute;
+		top: -40px;
+		-webkit-border-radius: 5px;
+		-moz-border-radius: 5px;
+		border-radius: 5px; }
+	
+	section #left-promo .owl-nav .fa {
+		display: table-cell;
+		vertical-align: middle;
+		text-align: center; }
+	
+	section #left-promo .owl-nav .owl-prev {
+		left: 10px; }
+	
+	section #left-promo .owl-nav .owl-next {
+		right: 10px; }
+	
+	section #left-promo .owl-dots {
+		width: 100%;
+		text-align: center;
+		position: absolute;
+		top: 90%;
+	}
+
+	.owl-dots .owl-dot{
+		-webkit-transition: all 0.3s ease-in-out;
+		-moz-transition: all 0.3s ease-in-out;
+		-o-transition: all 0.3s ease-in-out;
+		-ms-transition: all 0.3s ease-in-out;
+		transition: all 0.3s ease-in-out;
+	}
+
+	section #left-promo .owl-dots .owl-dot {
+		border: 1px solid #21cb71;
+	}
+
+	section #left-promo .owl-dots .owl-dot.active {
+		background: #21cb71;
+	}
+	
+	.rating {
+		cursor: pointer;
+	}
+
+    .rating span.highlight {
+        color: #ffc700;
+    }
+
+    .rating span.selected {
+        color: #ffc700;
+    }
+
+    .rating span {
+		color: #d7d7d7;
+    }
 
 	@media screen and (max-width: 767px) {
 		section.promo .wrap-promo .wp-left {
