--- a/bakul/css/custom.css
+++ b/bakul/css/custom.css
@@ -34,39 +34,37 @@
 	}
 
 	section.promo .wrap-promo .wp-left .item .pr-left-content{
-		margin: auto;
-		padding: 50px 50px 100px 50px
+		margin: 10% auto;
+		max-width: unset;
+	}
+
+	section.promo .wrap-promo .wp-left .item .pr-left-content img {
+		height: 100%;
+		width: 100%;
 	}
 
 	section #left-promo .owl-nav {
 		position: absolute;
-		top: 280px;
+		top: 0;
 		width: 100%;
-		opacity: 0;
 		-webkit-transition: all 0.5s ease-in-out;
 		-moz-transition: all 0.5s ease-in-out;
 		-o-transition: all 0.5s ease-in-out;
 		-ms-transition: all 0.5s ease-in-out;
-		transition: all 0.5s ease-in-out; }
-  
-	section #left-promo .owl-nav {
+		transition: all 0.5s ease-in-out; 
 		height: 100%;
 	}
 
 	section #left-promo .owl-nav .owl-prev,
 	section #left-promo .owl-nav .owl-next {
 		width: 50px;
-		height: 50px;
+		height: 100%;
 		display: table;
 		opacity: 1;
 		background-color: rgba(0, 0, 0, 0.6);
 		color: #ffffff;
 		font-size: 24px;
-		position: absolute;
-		top: -40px;
-		-webkit-border-radius: 5px;
-		-moz-border-radius: 5px;
-		border-radius: 5px; }
+		position: absolute; }
 	
 	section #left-promo .owl-nav .fa {
 		display: table-cell;
@@ -74,10 +72,10 @@
 		text-align: center; }
 	
 	section #left-promo .owl-nav .owl-prev {
-		left: 10px; }
+		left: 0px; }
 	
 	section #left-promo .owl-nav .owl-next {
-		right: 10px; }
+		right: 0px; }
 	
 	section #left-promo .owl-dots {
 		width: 100%;
@@ -102,30 +100,42 @@
 		background: #21cb71;
 	}
 	
-	.rating {
+	.form-testimonial .rating {
 		cursor: pointer;
+		font-size: 30px;
 	}
 
-    .rating span.highlight {
+    .form-testimonial .rating span.highlight {
         color: #ffc700;
     }
 
-    .rating span.selected {
+    .form-testimonial .rating span.selected {
         color: #ffc700;
     }
 
-    .rating span {
+    .form-testimonial .rating span {
 		color: #d7d7d7;
     }
 
 	@media screen and (max-width: 767px) {
+	
 		section.promo .wrap-promo .wp-left {
 			padding: 0;
 		}
+		
+		section.promo .wrap-promo .wp-left .pr-left-content img {
+			height: auto;
+		}
 	}
 
-	@media screen and (min-width: 620px) {
+	@media screen and (max-width: 620px) {
+	
+		section.promo .wrap-promo .wp-left .item .pr-left-content{
+			margin: 100px auto;
+		}
+	
 		section.promo .wrap-promo .wp-left .item .pr-left-bg img {
 			width: 800px;
 		}
+
 	}
