--- a/bakul/admin/css/custom.css
+++ b/bakul/admin/css/custom.css
@@ -1,47 +1,50 @@
-.bg-cover{
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(rgba(0, 174, 255, 0.7) 0%, rgba(0, 38, 255, 1) 100%);
-    margin: 0;
+.bg-cover {
+	width: 100%;
+	height: 100%;
+	background: radial-gradient(
+		rgba(0, 174, 255, 0.7) 0%,
+		rgba(0, 38, 255, 1) 100%
+	);
+	margin: 0;
 }
 
 .login-box {
-    margin: 0 auto;
-    height: 50vh;
-    padding: 15px;
+	margin: 0 auto;
+	height: 50vh;
+	padding: 15px;
 }
 
 .login-box-body {
-    border-radius: 10px;
-    box-shadow: 4px rgba(0,0,0,0.2), 5px rgba(0,0,0, 0.19)
+	border-radius: 10px;
+	box-shadow: 4px rgba(0, 0, 0, 0.2), 5px rgba(0, 0, 0, 0.19);
 }
 
 input[name="edit-logo"] {
-    position: absolute;
-    width: 0.1px;
-    height: 0.1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0,0,0,0);
+	position: absolute;
+	width: 0.1px;
+	height: 0.1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
 	border: 0;
 	z-index: -99;
 }
 
-.login-logo a{
-    color: white;
+.login-logo a {
+	color: white;
 }
 
-.col-pusher{
-    height: 20vh;
-    margin: auto;
+.col-pusher {
+	height: 20vh;
+	margin: auto;
 }
 
 .img-responsive {
-	height: 100px;  
+	height: 100px;
 }
 
-.input-group .input-group-addon{
+.input-group .input-group-addon {
 	min-width: 100px;
 }
 
@@ -60,17 +63,21 @@ input[name="edit-logo"] {
 }
 
 .input-group .input-group-addon.social-fb {
-	background-color: #116eb9; 
+	background-color: #116eb9;
 }
 
 .input-group .input-group-addon.social-ig {
-	background-color: #e92a99; 
+	background-color: #e92a99;
 }
 
 .input-group .input-group-addon.social-tw {
-	background-color: #3dbcee; 
+	background-color: #3dbcee;
 }
 
 .input-group .input-group-addon.social-yt {
-	background-color: #ee3d3d; 
+	background-color: #ee3d3d;
+}
+
+.pace .pace-activity {
+	right: 100px;
 }
