--- a/bakul/admin/css/map.css
+++ b/bakul/admin/css/map.css
@@ -1,16 +1,39 @@
-
-section.contact-map {
-  position: relative;
-  z-index: 0;
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+section.google-maps #map {
+	height: 500px;
 }
 
-section.contact-map h2 {
-  margin: 0px 0px 20px; }
-
-section.contact-map #map_canvas {
-  height: 400px;
+section.google-maps .controls {
+	background-color: #fff;
+	border-radius: 2px;
+	border: 1px solid transparent;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+	box-sizing: border-box;
+	font-family: Roboto;
+	font-size: 15px;
+	font-weight: 300;
+	height: 29px;
+	margin-left: 17px;
+	margin-top: 10px;
+	outline: none;
+	padding: 0 11px 0 13px;
+	text-overflow: ellipsis;
+	width: 400px;
 }
-section.contact-map .homepage-map {
-  width: 100%;
-  overflow: hidden;
-  position: relative; }
+
+section.google-maps .controls:focus {
+	border-color: #4d90fe;
+}
+
+section.google-maps .title {
+	font-weight: bold;
+}
+
+section.google-maps #infowindow-content {
+	display: none;
+}
+
+section.google-maps #map #infowindow-content {
+	display: inline;
+}
