--- a/application/assets/css/custom.css
+++ b/application/assets/css/custom.css
@@ -182,6 +182,66 @@ a:focus,
 a:active {
 	color: slateblue;
 }
+
+.hovereffect .overlay {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+body.theme-green .hovereffect p a {
+	background-color: transparent;
+	font-size: 6em;
+}
+
+section.gallery-page .list-image-gallery .gallery-img-box {
+	cursor: pointer;
+}
+
+#image-gallery .video-js {
+	max-width: 100%;
+	max-height: 500px;
+}
+
+#image-gallery .modal-content {
+	-webkit-box-shadow: initial !important;
+	box-shadow: initial !important;
+	background-color: transparent !important;
+	border: 0 !important;
+}
+
+#image-gallery .modal-body {
+	display: flex;
+}
+
+#image-gallery .modal-body .modal-nav-container {
+	display: flex;
+}
+
+#image-gallery .modal-footer {
+	border-top: 0;
+}
+
+#image-gallery .modal-body .btn-nav {
+	background-color: transparent;
+	border: 0;
+	color: #fff;
+	font-size: 4em;
+	padding: 0;
+}
+
+#image-gallery .modal-body video,
+#image-gallery .modal-body img {
+	margin: 0 auto;
+}
+
+#image-gallery button.close {
+	color: white;
+	opacity: 1;
+	padding: 10px;
+	font-size: 2em;
+}
+
 @media screen and (max-width: 1115px) {
 	section.home-slider .slide-caption.slider-caption-bottom {
 		top: 20em;
