--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -1621,9 +1621,11 @@ section.gallery-page .list-image-gallery .gallery-img-box-in {
 	padding: 10px;
 }
 
-section.gallery-page .list-image-gallery .gallery-img-box img {
-	max-width: 100%;
-	max-height: 100%;
+section.gallery-page .list-image-gallery .gallery-img-box .img-thumbnail {
+	width: 100%;
+	height: 100%;
+	background-color: #202020;
+	background-size: cover;
 }
 
 section.gallery-page .rounded-button {
@@ -1677,17 +1679,17 @@ section.gallery-page .rounded-button.active {
 	transform: scale(1);
 }
 
-.hovereffect img {
+.hovereffect .img-thumbnail {
 	display: block;
 	position: relative;
 	-webkit-transition: all 0.35s;
 	transition: all 0.35s;
 }
 
-.hovereffect:hover img {
+.hovereffect:hover .img-thumbnail {
 	filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
-	filter: brightness(0.6);
-	-webkit-filter: brightness(0.6);
+	filter: brightness(0.2);
+	-webkit-filter: brightness(0.2);
 }
 
 .hovereffect h2 {
